Changelog
=========

2.5 (unreleased)
----------------

* Added standard .gitignore [lgraf]
* Updated Italian translation [gborelli]
* Fixed titles and descriptions of various settings fields. Note: this will
  probably break translations [gborelli]
* Added German translation [Denis Krienbühl]


2.4 (2012-02-11)
----------------

* Added pt_BR translation [davilima6]
* Fixed tests [gborelli]
* Added French translation [Fabien Moret]
* Added Danish translation [stonor]


0.2.3 (2011-09-05)
------------------

* added support for Spanish translations [macagua]
* Updated testing to check for the presence of all style fields.
  [davidjb]
* Add map_width and map_height fields to styles interface for setting
  the height and width of collective.geo maps. Included upgrade step for
  GenericSetup profile.
  [davidjb]
* Add GenericSetup upgrade profile to handle upgrading plone.app.registry
  configuration with new property. Users with any previous versions
  of collective.geo.settings need to run the upgrade setup under
  portal_setup. [davidjb]
* Changed GenericSetup profile version number to be whole integers rather than
  package version number. [davidjb]
* added map_viewlet_position property in IGeoFeatureStyle [gborelli]
* added mapviewletmanagers vocabulary [gborelli]
* added map_viewlet_managers property [gborelli]
* plone 4.1 fixes [gborelli]
* changed Browser import from Testing.testbrowser [gborelli]
* added z3c.autoinclude entry point [gborelli]

0.2.2 (2010-12-28)
------------------

* Added dutch translations [robgietema]


0.2.1 (2010-11-13)
------------------

* added translations


0.2 (2010-10-31)
----------------

* Updated coordinate references to be consistent with WGS 1984
  reference system.  This involves standardising the coordinate order
  to be [longitude, latitude] rather than [latitude, longitude].
  [rockdj]
* Fixed the Google Maps url that is being returned and rendered, producing
  an incorrect API key message each time Google Maps is loaded.