@@ -1,17 +1,36 @@
-import unittest
+import unittest2 as unittest
 import doctest
 
-from Testing import ZopeTestCase as ztc
+from plone.testing import layered
+from ..testing import CGEO_SETTINGS_FUNCTIONAL
+from ..testing import CGEO_SETTINGS_INTEGRATION
 
-from collective.geo.settings.tests import base
+import collective.geo.settings.schema
 
 
 def test_suite():
-    return unittest.TestSuite([
-
-        ztc.ZopeDocFileSuite(
-            'README.txt', package='collective.geo.settings',
-            test_class=base.FunctionalTestCase,
+    suite = unittest.TestSuite()
+    suite.addTests([
+        layered(doctest.DocFileSuite(
+            'README.txt',
+            package='collective.geo.settings',
             optionflags=doctest.REPORT_ONLY_FIRST_FAILURE | \
-                    doctest.NORMALIZE_WHITESPACE | doctest.ELLIPSIS),
-        ])
+                doctest.NORMALIZE_WHITESPACE | doctest.ELLIPSIS
+            ),
+            layer=CGEO_SETTINGS_FUNCTIONAL
+        ),
+
+        layered(
+            doctest.DocTestSuite(
+                collective.geo.settings.schema,
+                optionflags=doctest.NORMALIZE_WHITESPACE | doctest.ELLIPSIS
+            ),
+            layer=CGEO_SETTINGS_INTEGRATION
+        ),
+
+    ])
+    return suite
+
+
+if __name__ == '__main__':
+    unittest.main(defaultTest='test_suite')
