@@ -4,6 +4,9 @@ Changelog
 2.5 (unreleased)
 ----------------
 
+* integrated test_schema in test_doctests [gborelli]
+* moved TestRequest to testing module [gborelli]
+* refactored tests in order to use plone.app.testing [gborelli]
 * Added standard .gitignore [lgraf]
 * Updated Italian translation [gborelli]
 * Fixed titles and descriptions of various settings fields. Note: this will
